# Lizard-Environnement-dev

./: CMakeLists.txt  LICENSE  OUTSTANDING.md  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
TerrariumCalc-ESP32S3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
TerrariumCalc-ESP32S3/components/calc/: CMakeLists.txt  calc.c  calc.h
TerrariumCalc-ESP32S3/components/gt911/: CMakeLists.txt  gt911.c  gt911.h
TerrariumCalc-ESP32S3/components/lvgl_conf/: lv_conf.h
TerrariumCalc-ESP32S3/main/: CMakeLists.txt  app_main.c  board_waveshare_7b.h
components/calc/: CMakeLists.txt  calc.c  calc.h
components/calc/test/: CMakeLists.txt  test_calc.c
components/gt911/: CMakeLists.txt  gt911.c  gt911.h
components/gt911/include/gt911/: gt911.h
main/: CMakeLists.txt  app_main.c  board_waveshare_7b.h  calc_common.h  calc_heating_cable.c  calc_heating_cable.h  calc_heating_pad.c  calc_heating_pad.h  calc_lighting.c  calc_lighting.h  calc_misting.c  calc_misting.h  calc_substrate.c  calc_substrate.h  lv_conf.h  storage.c  storage.h  ui_keyboard.c  ui_keyboard.h  ui_main.c  ui_main.h  ui_screens_about.c  ui_screens_about.h  ui_screens_cable.c  ui_screens_cable.h  ui_screens_home.c  ui_screens_home.h  ui_screens_lighting.c  ui_screens_lighting.h  ui_screens_misting.c  ui_screens_misting.h  ui_screens_pad.c  ui_screens_pad.h  ui_screens_substrate.c  ui_screens_substrate.h
